--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="./index.css" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/helvetica-255" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">            
+    <link
+      href="https://fonts.cdnfonts.com/css/helvetica-255"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.cdnfonts.com/css/helvetica-neue-9"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" />
     <title>Home</title>
-    
+
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
