--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Trouvez la meilleur agence communication/marketing selon vos besoins"
     />
     <link
       href="https://fonts.cdnfonts.com/css/helvetica-255"
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" />
-    <title>Home</title>
+    <title>Storyscope</title>
 
     <script id="react-dotenv" src="./env.js"></script>
   </head>
