--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L1X0Q5P47T"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-L1X0Q5P47T');
+    </script>    
     <meta name="theme-color" content="#000000" />
     <title>Storyscope</title>
-
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
