--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/index.css"/>
+    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L1X0Q5P47T"></script>
     <script>
